# xray_ct

./: .directory  .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  README.md
documentation/html/: AcquisitionModel_8h_source.html  AcquisitionPose_8h_source.html  AcquisitionWidget_8h_source.html  Acquisition_8h_source.html  AxisWidget_8h_source.html  BoxSlider_8h_source.html  CG_8h_source.html  CameraPose_8h_source.html  DVRCamera_8h_source.html  DVRControlWidget_8h_source.html  DVRModel_8h_source.html  DVRWidget_8h_source.html  DataContainer_8h_source.html  DebugStuff_8h_source.html  EDFhandler_8h_source.html  IOutilities_8h_source.html  LinearPiece_8h_source.html  MIP_8h_source.html  MPRControlWidget_8h_source.html  MPRModel_8h_source.html  MPRWidget_8h_source.html  MainWindow_8h_source.html  NormalReconstructionContainer_8h_source.html  PoseDisplay_8h_source.html  PoseViewer_8h_source.html  Pose_8h_source.html  RayTracing_8h_source.html  ReconstructionModel_8h_source.html  ReconstructionViewer_8h_source.html  RegularizationContainer_8h_source.html  ResultWidget_8h_source.html  SliceWidget_8h_source.html  Timer_8h_source.html  TransferFuncWidget_8h_source.html  TransferFunction_8h_source.html  Vec3D_8h_source.html  VisualizationModel_8h_source.html  VisualizationWidget_8h_source.html  Volume_8h_source.html  annotated.html  (+250 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+6 more)
src/: .directory  CMakeLists.txt  main.cpp
src/acq/: AcquisitionModel.cpp  AcquisitionModel.h  AcquisitionPose.cpp  AcquisitionPose.h  CMakeLists.txt  EDFhandler.cpp  EDFhandler.h  ForwardProjectionOperator.cpp  ForwardProjectionOperator.h  IOutilities.h  Pose.cpp  Pose.h  PoseViewer.cpp  PoseViewer.h  PoseWidget.cpp  PoseWidget.h  RayTracing.cpp  RayTracing.h  Vec3D.h  Volume.h  definitions.h
src/edf/: EDFhandler.h  Volume.h  volume.h
src/gui/: AcquisitionWidget.h  AxisWidget.cpp  AxisWidget.h  BoxSlider.cpp  BoxSlider.h  CMakeLists.txt  DVRControlWidget.cpp  DVRControlWidget.h  DVRWidget.cpp  DVRWidget.h  MPRControlWidget.cpp  MPRControlWidget.h  MPRWidget.cpp  MPRWidget.h  MainWindow.h  PoseDisplay.cpp  PoseDisplay.h  PoseViewer.cpp  PoseViewer.h  ReconstructionViewer.cpp  ReconstructionViewer.h  ResultWidget.cpp  ResultWidget.h  SelectColorButton.cpp  SelectColorButton.h  SliceViewer.cpp  SliceViewer.h  SliceWidget.cpp  SliceWidget.h  TransferFuncWidget.cpp  TransferFuncWidget.h  VisualizationWidget.cpp  VisualizationWidget.h
src/rec/: CG.cpp  CG.h  CMakeLists.txt  DataContainer.cpp  DataContainer.h  NormalReconstructionContainer.h  ReconstructionModel.cpp  ReconstructionModel.h  RegularizationContainer.h
src/util/: Acquisition.h  CMakeLists.txt  DebugStuff.h  Timer.h
src/vis/: CMakeLists.txt  CameraPose.cpp  CameraPose.h  DVRModel.h  LinearPiece.cpp  LinearPiece.h  MIP.cpp  MPRModel.cpp  MPRModel.h  TransferFunction.cpp  TransferFunction.h  VisualizationModel.h
test/: acq_pose_tests.cpp  test_CG.cpp  test_MIP.cpp  test_RayTracing.cpp  test_SinogramGeneration.cpp  test_Volume.cpp
volumes/: box_50.edf  cross_50.edf
